--- a/app/shared/input-control/InputControl.css
+++ b/app/shared/input-control/InputControl.css
@@ -32,13 +32,13 @@
 }
 
 .ic_error {
-    text-align: left;
     font-weight: 300;
     font-size: var(--fs-300);
     color: var(--clr-error);
     height: var(--error-placeholder-size);
     text-wrap: nowrap;
 }
+
 .ic_error::first-letter {
     text-transform: uppercase;
 }
